# fastscape

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: pypipublish.yml  tests.yml
doc/: environment.yml
doc/source/: cite.rst  conf.py  develop.rst  examples.rst  index.rst  install.rst  models.rst  processes.rst  release_notes.rst
doc/source/_static/: style.css
doc/source/_templates/: process_class.rst
fastscape/: __init__.py  _version.py  boundaries.py  grid.py  isostasy.py  main_drivers.py  tectonics.py
fastscape/models/: __init__.py  _models.py
fastscape/processes/: __init__.py  boundary.py  channel.py  context.py  erosion.py  flow.py  grid.py  hillslope.py  initial.py  isostasy.py  main.py  marine.py  surface.py  tectonics.py
fastscape/tests/: fixtures.py  test_processes_boundary.py  test_processes_context.py  test_processes_grid.py  test_processes_initial.py  test_processes_main.py  test_processes_tectonics.py
